--- a/PI-Pokemon-main/client/src/Components/CardsContainer/CardsContainer.css
+++ b/PI-Pokemon-main/client/src/Components/CardsContainer/CardsContainer.css
@@ -11,7 +11,7 @@
   margin-bottom: 10px;
 }
 .card {
-  border: 5px solid rgb(52, 101, 175);
+  border: 5px solid blue;
   height: fit-content;
   width: 240px;
   margin-top: 15px;
@@ -34,10 +34,11 @@
   align-items: center;
 }
 .navBar {
-  background-color: rgba(23, 103, 232, 0.872);
+  background-color: red;
   display: flex;
   justify-content: space-around;
-  height: 5rem;
+  height: 7rem;
+  border: 3px solid black;
   align-items: center;
 }
 .filter {
@@ -45,25 +46,27 @@
   gap: 1rem;
 }
 .createPokemon {
-  border: 2px solid blue;
+  border: 3px solid black;
   background-color: yellow;
-  color: blue;
-  height: 2rem;
-  border-radius: 10px;
+  color: black;
+  height: 3rem;
+  border-radius: 15px;
+  font-size: medium;
 }
 .handlePageButton {
   border: 2px solid blue;
-  background-color: yellow;
-  color: blue;
+  background-color: red;
+  color: white;
   border-radius: 6px;
   margin-left: 8px;
   margin-right: 8px;
-  height: 2rem;
-  width: 2rem;
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 .handlePageContainer {
   margin-bottom: 10px;
+
   margin-top: 10px;
   justify-content: space-around;
 }
