--- a/PI-Pokemon-main/client/src/Components/Filter/Filter.css
+++ b/PI-Pokemon-main/client/src/Components/Filter/Filter.css
@@ -1,9 +1,11 @@
 .filterButton {
-  background-color: yellow;
-  border: 2px solid blue;
-  border-radius: 10px;
-  color: blue;
-  height: 2.5rem;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 20px;
+  color: black;
+  height: 3rem;
+  width: auto;
   cursor: pointer;
   margin: 0;
+  font-size: medium;
 }
