--- a/PI-Pokemon-main/client/src/Components/SearchBar/SearchBar.css
+++ b/PI-Pokemon-main/client/src/Components/SearchBar/SearchBar.css
@@ -1,16 +1,20 @@
 .input {
-  background-color: yellow;
-  border: 2px solid blue;
-  border-radius: 10px;
-  height: 1.6rem;
+  background-color: white;
+  border: 3px solid black;
+  border-radius: 15px;
+  color: black;
+  height: 2.5rem;
+  width: 12rem;
+  font-size: large;
 }
 .searchButton {
-  background-color: yellowgreen;
-  color: rgb(52, 101, 175);
-  border: 2px solid blue;
-  border-radius: 10px;
-  height: 1.9rem;
+  background-color: yellow;
+  color: black;
+  border: 3px solid black;
+  border-radius: 15px;
+  height: 2.8rem;
+  font-size: medium;
 }
 .searchForm {
-  height: 2rem;
+  height: 2.5rem;
 }
